--- a/Vue/函数式组件-数据组件.md
+++ b/Vue/函数式组件-数据组件.md
@@ -1,8 +1,8 @@
 # 函数试组件的运用
 
-定义：函数式组件只负责处理数据并将数据暴露个父级组件，不负责UI部分的渲染。  
+定义：数据组件只负责处理数据并将数据暴露个父级组件，不负责UI部分的渲染。  
 优点：不负责渲染，只负责数据处理，提高了组件的高内聚、低耦合。在逻辑层将UI与数据分离，提高了组件的可维护性。
-约定： 在文件名命名时采用 `xxx.m.vue` 的形式命名,在组件内部使用 `xxx_m` 命名。
+约定： 在文件名命名时采用 `xxx.m.vue` 的形式命名,在组件内部使用 `xxx_m` 命名。(m 代表模型)
 
 实现思想： 利用props接收父组件传递的数据， 而插槽中的我们可以将子组件中的数据传递给父组件,这样就可以实现父组件和子组件的数据交互。
 
